<resources>
    <string name="app_name">Retro Studio</string>
    <string name="title_section1">Projects</string>
    <string name="title_section2">Saved Songs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_newsong">New Song</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor_landscape">Editor</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_slidenotedrawer">Show/Hide Note Drawer</string>
    <string name="action_addtrack">Add Track</string>
    <string name="track_text">Tracks</string>
    <string name="note_handle">Notes</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="action_togglefs">Toggle Full Screen</string>
    <string name="action_save">Save</string>
    <string name="action_saveas">Save As...</string>
    <string name="measures">Measure</string>
    <string name="action_penciloff">Turn Pencil Off</string>
    <string name="time_sig_picker_msg">Choose a time signature.</string>
    <string name="time_sig_picker_title">Project Creation</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="action_octave">Octave</string>
    <string name="action_tempo">Tempo</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="action_about">About...</string>
    <string name="action_exportaswav">Export as WAV...</string>
    <string name="about_us_html"><![CDATA[<html>
<div align="center">
<h1>Retro Studio 1.0</h1>
<h2>Authors:</h2>
<b>Gabriel Esposito<b> <br>
<b>Kevin Bartlett<b> <br>
<b>Janelle Scott<b> <br><br>

Retro Studio is open source and licensed with the GNU GPL available <b><a href="http://www.gnu.org/licenses/gpl.html">here</a></b>.<br>
During the development of this project we used the following open source libraries:<br>
<b><a href="https://github.com/futuresimple/android-floating-action-button">FloatingActionButton</a></b><br>
Which is licensed under the Apache License available at the link.<br>

Thank you for trying our app!
</div>
</html>]]></string>
</resources>