<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Retro Studio Copyright 2015 Retro Team
  ~ This file is part of Retro Studio.
  ~
  ~ Retro Studio is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Retro Studio is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Retro Studio.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".EditorLandscape">
        android:showAsAction="always"/>
    <item android:id="@+id/action_tempo" android:title="@string/action_tempo"
        android:showAsAction="always" />
    <item android:id="@+id/action_play"
        android:icon="@drawable/play_icon"
        android:title="@string/action_play"
        android:showAsAction="always"/>
    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:icon="@drawable/settings_icon"
        android:showAsAction="never" />
    <item android:id="@+id/action_saveas" android:title="@string/action_saveas"
        android:icon="@drawable/settings_icon"
        android:showAsAction="never" />
    <item android:id="@+id/action_exportaswav" android:title="@string/action_exportaswav"
        android:icon="@drawable/settings_icon"
        android:showAsAction="never" />
    <item android:id="@+id/action_togglefs" android:title="@string/action_togglefs"
        android:icon="@drawable/settings_icon"
        android:showAsAction="never" />
</menu>